change layout of contact section, add link to about section in nav menu, fixed issue with layout on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
   height: 100%;
 }
 section h2 {
-  padding-top: 7rem;
   font-size: 3rem;
   text-align: center;
 }
@@ -21,9 +20,13 @@ section h2 {
 a {
   transition: all .35;
 }
-section {
-  padding-bottom: 7rem;
+.work-section,
+.skills-section,
+.contact-section {
+  padding-top: 4em;
+  padding-bottom: 4em;
 }
+
 /* Navigation bar styles */
 .navbar .navbar-nav .nav-link {
   color:#050f57;
@@ -54,6 +57,7 @@ color: #ffffff;
   background-color: #3042ff;
   background-image: linear-gradient(to bottom, #3042ff , #6457ff, #917fff);
   margin-top: 0;
+  padding-bottom: 2em;
 }
 .work-section h2 {
   color: #ffffff;
@@ -88,15 +92,18 @@ color: #ffffff;
   background-image: linear-gradient(to bottom, #050f57 , #231b64, rgb(66, 56, 119), #8078a2);
   color: #ffffff;
 }
-.contact-title{
+/*.contact-title{
   padding-top: 3rem;
 }
 .contact, .about {
   padding-left: 1rem;
   padding-right: 1rem;
-}
+}*/
 .text-align-center {
   text-align: center;
+}
+.text-align-left {
+  text-align: left;
 }
 
 .email-btn {
@@ -142,11 +149,14 @@ h5.card-title {
   font-size: 10px;
 }
 section h2 {
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 }
 
 @media only screen and (max-width:768px) {
+  .email-me-hide {
+    display: none;
+  }
   #skills{
     font-size: 14px;
   }
